arch/Kconfig: add arch-dependent option for usb support
* There is user-specific option USBDEV to enable/disable
  support for USB drivers on the system, which does not
  care about whether architecture layer provide support
  for USB subsystem. Add ARCH_HAVE_USB option and make
  USBDEV dependent on it.

Signed-off-by: Oleg Lyovin <o.lyovin@partner.samsung.com>

--- a/os/drivers/Kconfig
+++ b/os/drivers/Kconfig
@@ -450,6 +450,7 @@ endif # SERIAL
 
 menuconfig USBDEV
 	bool "USB Device Driver Support"
+	depends on ARCH_HAVE_USB
 	default n
 	---help---
 		USB device drivers.  See also include/tinyara/usb/usbdev.h
